--- a/src/components/Gallery/styles.module.scss
+++ b/src/components/Gallery/styles.module.scss
@@ -2,8 +2,10 @@
   overflow: hidden;
   height: 100%;
   width: 100%;
-  max-width: 500px;
   margin: 0 auto;
+  @media (min-width: 600px) {
+    max-width: 500px;
+  }
 }
 
 .inner {
