--- a/src/components/Grid/styles.module.scss
+++ b/src/components/Grid/styles.module.scss
@@ -3,8 +3,10 @@
   height: 100%;
   justify-content: center;
   align-items: flex-end;
-  max-width: 500px;
   margin: 0 auto;
+  @media (min-width: 600px) {
+    max-width: 500px;
+  }
 }
 .grid {
   height: 100%;
