--- a/src/components/Overlay/styles.module.scss
+++ b/src/components/Overlay/styles.module.scss
@@ -64,8 +64,8 @@
   position: absolute;
   background: rgba(42, 42, 42, 0.98);
   width: 100%;
-  height: 65%;
-  max-height: 450px;
+  height: 60%;
+  max-height: 550px;
   border-radius: 20px 20px 0 0;
 }
 .numLikes {
